# Nereus

./: .gitignore  Containerfile  README.md  configure_enclave.sh  expose_enclave.sh  package-lock.json  package.json  pnpm-lock.yaml
app/: globals.css  layout.tsx  page.tsx  providers.tsx
app/data/: mock-markets.ts
app/market/: page.tsx
app/market/[slug]/: page.tsx
apps/web/store/: storeStore.ts
components/: hero.tsx  homCard.tsx  market-chart.tsx  market-outcome.tsx  navbar.tsx  trading-panel.tsx
components/ui/: Card.tsx
enclave/: Move.toml
lib/: category.ts
move/nereus/script/: Readme.md  decode_order.js  interact_market.sh  merge_usdc.sh
move/nereus/scripts/: deploy_testnet.sh  interact_market.sh  upgrade_package.sh
move/nereus/sources/: market.move  truth_oracle.move  usdc.move
move/nereus/tests/: market_tests.move
nautilus_rust_runtime/: Cargo.toml
nautilus_rust_runtime/src/: main.rs
nereus/: Move.toml  package.json  pnpm-lock.yaml
nereus/apps/web/: package.json
nereus/apps/web/app/: page.tsx
nereus/apps/web/components/: category-tabs.tsx  create_wpg.tsx  market-grid.tsx  navbar.tsx  providers.tsx
nereus/apps/web/hooks/: useBuyNo.ts  (+1 more)
nereus/sources/: market.move  truth_oracle.move  usdc.move
nereus/tests/: nereus_tests.move
no/: Move.toml
no/sources/: no.move
no/tests/: no_tests.move
services/: api-service.ts
src/nautilus-server/: Cargo.toml  run.sh
src/nautilus-server/src/: lib.rs  main.rs
stores/: ui-store.ts
types/: market-types.ts
yes/: Move.toml
yes/sources/: yes.move
yes/tests/: yes_tests.move
(+27 files in other folders)
